--- a/smart-calendar/src/app/layouts/auth-layout/auth-layout.scss
+++ b/smart-calendar/src/app/layouts/auth-layout/auth-layout.scss
@@ -50,6 +50,9 @@
     margin: var(--space-4) 0;
     font-size: clamp(1.5rem, 4vw, 2rem);
     font-weight: var(--font-bold);
+    text-box: uppercase;
+    text-transform: uppercase;
+    text-shadow: 0 2px 4px rgba(73, 1, 255, 0.2);
   }
 }
 
