feat: html rename

--- a/smart-calendar/src/app/layouts/auth-layout/auth-layout.html
+++ b/smart-calendar/src/app/layouts/auth-layout/auth-layout.html
@@ -3,7 +3,7 @@
     <div class="auth-card">
       <div class="auth-header">
         <img src="assets/images/Logo_dark.png" alt="Logo" class="app-logo" width="200" height="60" loading="eager">
-        <h1>Smart Calendar</h1>
+        <h1>Smart Callendar</h1>
         <p class="auth-subtitle">
           {{ isForgotMode ? 'Redefinir senha' : (isLoginMode ? 'Entre na sua conta' : 'Crie sua conta') }}
         </p>
